--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -261,9 +261,9 @@ AM_CPPFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 MAGICK_BASE_SRCS = memory.c blob.c cache.c error.c monitor.c constitute.c \
   image.c list.c color.c quantize.c segment.c zoom.c transform.c shear.c \
   enhance.c effect.c decorate.c annotate.c type.c draw.c render.c montage.c \
-  semaphore.c attribute.c signature.c compress.c gem.c registry.c magic.c \
-  magick.c delegate.c module.c static.c timer.c utility.c cache_view.c \
-  stream.c animate.c display.c widget.c xwindow.c PreRvIcccm.c command.c
+  semaphore.c attribute.c signature.c compress.c command.c gem.c registry.c \
+	magic.c magick.c delegate.c module.c static.c timer.c utility.c cache_view.c \
+  stream.c animate.c display.c widget.c xwindow.c PreRvIcccm.c
 
 
 # Platform specific source files that may appear in the library
@@ -284,10 +284,10 @@ bin_SCRIPTS = Magick-config
 
 # Headers which are installed
 include_HEADERS = PreRvIcccm.h api.h attribute.h blob.h cache.h \
-  cache_view.h classify.h compress.h magick_config.h delegate.h draw.h \
-  render.h error.h gem.h image.h command.h list.h magic.h magick.h module.h monitor.h \
-  quantize.h registry.h semaphore.h timer.h utility.h version.h widget.h \
-  xwindow.h
+  cache_view.h classify.h command.h compress.h magick_config.h delegate.h \
+  draw.h render.h error.h gem.h image.h list.h magic.h magick.h module.h \
+  monitor.h quantize.h registry.h semaphore.h timer.h utility.h version.h \
+	widget.h xwindow.h
 
 
 # Headers which are not installed but which are distributed
@@ -323,10 +323,10 @@ am__objects_1 = memory.lo blob.lo cache.lo error.lo monitor.lo \
 	constitute.lo image.lo list.lo color.lo quantize.lo segment.lo \
 	zoom.lo transform.lo shear.lo enhance.lo effect.lo decorate.lo \
 	annotate.lo type.lo draw.lo render.lo montage.lo semaphore.lo \
-	attribute.lo signature.lo compress.lo gem.lo registry.lo \
-	magic.lo magick.lo delegate.lo module.lo static.lo timer.lo \
-	utility.lo command.lo cache_view.lo stream.lo animate.lo display.lo \
-	widget.lo xwindow.lo PreRvIcccm.lo
+	attribute.lo signature.lo compress.lo command.lo gem.lo \
+	registry.lo magic.lo magick.lo delegate.lo module.lo static.lo \
+	timer.lo utility.lo cache_view.lo stream.lo animate.lo \
+	display.lo widget.lo xwindow.lo PreRvIcccm.lo
 @CYGWIN_BUILD_FALSE@@WIN32_NATIVE_BUILD_FALSE@am__objects_2 =
 @CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@am__objects_2 = \
 @CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@	ntfeature.lo
@@ -348,25 +348,25 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/animate.Plo ./$(DEPDIR)/annotate.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/attribute.Plo ./$(DEPDIR)/blob.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/cache.Plo ./$(DEPDIR)/cache_view.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/color.Plo ./$(DEPDIR)/compress.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/constitute.Plo ./$(DEPDIR)/decorate.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/delegate.Plo ./$(DEPDIR)/display.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/draw.Plo ./$(DEPDIR)/effect.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/enhance.Plo ./$(DEPDIR)/error.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/gem.Plo ./$(DEPDIR)/image.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/list.Plo ./$(DEPDIR)/magic.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/magick.Plo ./$(DEPDIR)/memory.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/module.Plo ./$(DEPDIR)/monitor.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/montage.Plo ./$(DEPDIR)/ntbase.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ntfeature.Plo ./$(DEPDIR)/quantize.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/registry.Plo ./$(DEPDIR)/render.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/segment.Plo ./$(DEPDIR)/semaphore.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/shear.Plo ./$(DEPDIR)/signature.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/static.Plo ./$(DEPDIR)/stream.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/timer.Plo ./$(DEPDIR)/transform.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/type.Plo ./$(DEPDIR)/command.Plo ./$(DEPDIR)/utility.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/widget.Plo ./$(DEPDIR)/xwindow.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/zoom.Plo
+@AMDEP_TRUE@	./$(DEPDIR)/color.Plo ./$(DEPDIR)/command.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/compress.Plo ./$(DEPDIR)/constitute.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/decorate.Plo ./$(DEPDIR)/delegate.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/display.Plo ./$(DEPDIR)/draw.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/effect.Plo ./$(DEPDIR)/enhance.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/error.Plo ./$(DEPDIR)/gem.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/image.Plo ./$(DEPDIR)/list.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/magic.Plo ./$(DEPDIR)/magick.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/memory.Plo ./$(DEPDIR)/module.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/monitor.Plo ./$(DEPDIR)/montage.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/ntbase.Plo ./$(DEPDIR)/ntfeature.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/quantize.Plo ./$(DEPDIR)/registry.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/render.Plo ./$(DEPDIR)/segment.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/semaphore.Plo ./$(DEPDIR)/shear.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/signature.Plo ./$(DEPDIR)/static.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/stream.Plo ./$(DEPDIR)/timer.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/transform.Plo ./$(DEPDIR)/type.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/utility.Plo ./$(DEPDIR)/widget.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/xwindow.Plo ./$(DEPDIR)/zoom.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -483,6 +483,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cache.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cache_view.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/color.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/command.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/compress.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/constitute.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/decorate.Plo@am__quote@
@@ -515,7 +516,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/transform.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/type.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/command.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utility.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/widget.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xwindow.Plo@am__quote@
